<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_item_outline"
    android:padding="20dp"
    android:elevation="4dp"
    android:layout_margin="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/imageProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="@dimen/normal_100"
        android:background="@android:color/darker_gray"
        android:layout_width="60dp"
        android:layout_height="60dp">

        <ImageView
            android:contentDescription="@string/image_profile"
            android:background="#2A3A72"
            android:id="@+id/profilePhoto"
            android:padding="5dp"
            android:scaleType="centerInside"
            tools:src="@drawable/adam_as"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.cardview.widget.CardView>

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        android:text="@string/nama"
        android:fontFamily="@font/poppins_bold"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:transitionName="nameDetail"
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        android:id="@+id/tv_description"
        android:layout_marginTop="5dp"
        android:maxLines="1"
        android:layout_marginStart="16dp"
        android:transitionName="descriptionDetail"
        android:text="@string/tempat_diutus"
        android:fontFamily="@font/poppins_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textStory"
        android:text="@string/lorem_ipsum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="4"
        android:fontFamily="@font/poppins_light"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        app:layout_constraintBottom_toTopOf="@id/image_card"/>
    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@id/textStory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/image_card"
        android:transitionName="imageDisplay"
        app:cardCornerRadius="20dp"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <ImageView
            android:id="@+id/image"
            android:scaleType="centerCrop"
            android:transitionName="imageDetail"
            android:contentDescription="@string/image_item"
            tools:src="@tools:sample/avatars"
            android:background="#4CAF50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>